--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack/webpack.common.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack/webpack.common.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack/webpack.prod.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -66,6 +66,7 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
