--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack/webpack.prod.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack/webpack.dev.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack/webpack.dev.js",
+    "prepare": "husky install",
+    "uninstallHusky": "npm uninstall husky && git config --unset core.hooksPath"
   },
   "repository": {
     "type": "git",
@@ -56,6 +58,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
