--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.22.4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
