--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "outDir": "./dist",
     "strict": false,
     "forceConsistentCasingInFileNames": true,
@@ -8,23 +8,20 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noImplicitAny": true,
-    "allowJs": false,
-    "target": "es5",
-    "module": "commonjs",
+    "allowJs": true,
+    "target": "ES6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "paths": {
-      "@/*": ["./src/*"],
-    }
+			"@/*": ["src/*"],
+			"@public/*": ["public/*"],
+		}
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "test/**/*.ts",
+    "src/**/*",
   ],
   "exclude": ["./dist", "node_modules", "./config"]
 }
