--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
 	"editor.tabSize": 2,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": false,
+    "source.fixAll.eslint": true
   },
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs":"active",
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-  "eslint.workingDirectories": ["./{PATH_TO_CLIENT}"],
+  "eslint.workingDirectories": ["./{PATH_TO_CLIENT}"]
 }
