--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "./src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build-js",
+    "build": "npm run build-ts",
     "build-js": "cross-env NODE_ENV=production language=js webpack --config ./config/webpack/webpack.prod.js",
     "build-ts": "cross-env NODE_ENV=production language=ts webpack --config ./config/webpack/webpack.prod.js",
-    "dev": "npm run dev-js",
+    "dev": "npm run dev-ts",
     "dev-js": "cross-env NODE_ENV=development language=js webpack-dev-server --config ./config/webpack/webpack.dev.js",
     "dev-ts": "cross-env NODE_ENV=development language=ts webpack-dev-server --config ./config/webpack/webpack.dev.js",
     "lint": "eslint --ext .js --ext .jsx src/",
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.184",
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
