--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "tuntun-react-app",
   "version": "1.0.0",
   "description": "自用react脚手架",
-  "main": "./src/js/index.js",
+  "main": "./src/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build-ts",
-    "build-js": "cross-env NODE_ENV=production language=js webpack --config ./config/webpack/webpack.prod.js",
-    "build-ts": "cross-env NODE_ENV=production language=ts webpack --config ./config/webpack/webpack.prod.js",
-    "dev": "npm run dev-ts",
-    "dev-js": "cross-env NODE_ENV=development language=js webpack-dev-server --config ./config/webpack/webpack.dev.js",
-    "dev-ts": "cross-env NODE_ENV=development language=ts webpack-dev-server --config ./config/webpack/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack/webpack.prod.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack/webpack.dev.js",
     "lint": "eslint --ext .js --ext .jsx --ext .ts --ext .tsx src/",
     "prepare": "husky install",
     "uninstallHusky": "npm uninstall husky && git config --unset core.hooksPath"
