--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.6.4",
@@ -49,6 +50,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
